magic text done

--- a/magic-text/index.html
+++ b/magic-text/index.html
@@ -3,13 +3,16 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="main.css">
 
+
 <body>
     <div id="left-side" class="side">
-        <h2 class="title">Today is going to be awesome</h2>
+        <h2 class="title">Today is going to be <span  class="fancy">awesome</span></h2>
     </div>
     <div id="right-side" class="side">
-        <h2 class="title">Today is going to be wonderful</h2>
+        <h2 class="title">Today is going to be <span class="fancy">wonderful</span></h2>
     </div>
+    <script type="text/javascript" src="main.js"></script>
 </body>
+
 
 </html>
